--- a/css/food.css
+++ b/css/food.css
@@ -115,8 +115,8 @@
   height: 350px;
   opacity: 0;
   pointer-events: none;
-  /* transform: translate(0px, 0px); */
-  /* transform-origin: center center; */
+  transform: translate(0px, 0px);
+  transform-origin: center center;
   transition: all 0.3s ease-in-out;
 }
 .glass {
